--- a/FacturaElectronicaSeguimientoDian/app.config
+++ b/FacturaElectronicaSeguimientoDian/app.config
@@ -1,31 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_IService" />
+                <binding name="BasicHttpBinding_IService"/>
                 <binding name="BasicHttpsBinding_IService">
-                    <security mode="Transport" />
+                    <security mode="Transport"/>
                 </binding>
-                <binding name="BasicHttpBinding_IService1" />
+                <binding name="BasicHttpBinding_IService1"/>
                 <binding name="BasicHttpsBinding_IService1">
-                    <security mode="Transport" />
+                    <security mode="Transport"/>
                 </binding>
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://emision21.thefactoryhka.com.co/ws/adjuntos/Service.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService"
-                contract="ServiceAdjuntos.IService" name="BasicHttpBinding_IService" />
-            <endpoint address="https://emision21.thefactoryhka.com.co/ws/adjuntos/Service.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpsBinding_IService"
-                contract="ServiceAdjuntos.IService" name="BasicHttpsBinding_IService" />
-            <endpoint address="http://emision21.thefactoryhka.com.co/ws/v1.0/Service.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1"
-                contract="ServiceEnvio.IService" name="BasicHttpBinding_IService1" />
-            <endpoint address="https://emision21.thefactoryhka.com.co/ws/v1.0/Service.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpsBinding_IService1"
-                contract="ServiceEnvio.IService" name="BasicHttpsBinding_IService1" />
+            <endpoint address="http://emision21.thefactoryhka.com.co/ws/adjuntos/Service.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService" contract="ServiceAdjuntos.IService" name="BasicHttpBinding_IService"/>
+            <endpoint address="https://emision21.thefactoryhka.com.co/ws/adjuntos/Service.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpsBinding_IService" contract="ServiceAdjuntos.IService" name="BasicHttpsBinding_IService"/>
+            <endpoint address="http://emision21.thefactoryhka.com.co/ws/v1.0/Service.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1" contract="ServiceEnvio.IService" name="BasicHttpBinding_IService1"/>
+            <endpoint address="https://emision21.thefactoryhka.com.co/ws/v1.0/Service.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpsBinding_IService1" contract="ServiceEnvio.IService" name="BasicHttpsBinding_IService1"/>
         </client>
     </system.serviceModel>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/></startup></configuration>
