--- a/FacturaElectronicaGS/app.config
+++ b/FacturaElectronicaGS/app.config
@@ -8,24 +8,18 @@
                     <security mode="Transport" />
                 </binding>
                 <binding name="BasicHttpBinding_IService1" />
-                <binding name="BasicHttpsBinding_IService1">
-                    <security mode="Transport" />
-                </binding>
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://emision21.thefactoryhka.com.co/ws/v1.0/Service.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1"
-                contract="ServiceEnvio.IService" name="BasicHttpBinding_IService1" />
-            <endpoint address="https://emision21.thefactoryhka.com.co/ws/v1.0/Service.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpsBinding_IService1"
-                contract="ServiceEnvio.IService" name="BasicHttpsBinding_IService1" />
             <endpoint address="http://emision21.thefactoryhka.com.co/ws/adjuntos/Service.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService"
                 contract="ServiceAdjuntos.IService" name="BasicHttpBinding_IService" />
             <endpoint address="https://emision21.thefactoryhka.com.co/ws/adjuntos/Service.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpsBinding_IService"
                 contract="ServiceAdjuntos.IService" name="BasicHttpsBinding_IService" />
+            <endpoint address="http://emision21v4.thefactoryhka.com.co/ws/v1.0/Service.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1"
+                contract="ServiceEnvio.IService" name="BasicHttpBinding_IService1" />
         </client>
     </system.serviceModel>
 </configuration>
